--- a/hellen_brunelli.html
+++ b/hellen_brunelli.html
@@ -22,9 +22,7 @@
 				<div class="background-DEBBDD">
 					<h2>O que eu quero</h2>
 				</div>
-				<p>Atuar como desenvolvedora front-end, consolidar as habilidades adquiridas e impactar a vida de
-					pessoas através
-					de ferramentas tecnológicas.</p>
+				<p>Atuar como desenvolvedora front end jr, consolidar os conhecimentos e habilidades já adquiridos, além de aprender muito mais. Quero ser uma agente de mudanças e conseguir ajudar as pessoas através da tecnologia.</p>
 			</div>
 			<address>
 				<ul>
@@ -128,7 +126,7 @@
 				<div class="interest">
 					<h3>{ Reprograma }</h3>
 					<h5>2018</h5>
-					<p>Um projeto social que visa diminuir o gap de gênero em tecnologia, é um bootcamp intensivo e nele aprendemos: Conceitos básicos de UX, Git e Github, Web Design Responsivo,  HTML5, CSS3, Javascript, SASS, Jquery, Bootstrap, React e Storybook, Consumir APIs, aprendemos muito sobre pesquisa em documentação, além de mentorias e  Orientação Profissional. Usamos também: o figma, MarvelApp, o Netlify e para codar utilizamos o VSCode</p>
+					<p>Um projeto social que visa diminuir o gap de gênero em tecnologia, é um bootcamp intensivo e nele aprendemos: Conceitos básicos de UX, Git e Github, Web Design Responsivo,  HTML5, CSS3, Javascript, SASS, Jquery, Bootstrap, React e Storybook, Consumir APIs, aprendemos muito sobre pesquisa em documentação, além de mentorias e  Orientação Profissional. Usamos também: o Figma, MarvelApp, o Netlify e para codar utilizamos o VSCode</p>
 				</div>
 			</div>
 
@@ -330,9 +328,9 @@
 						<div class="point has-point"></div>
 						<div class="point has-point"></div>
 						<div class="point has-point"></div>
-						<div class="point has-point"></div>
-						<div class="point "></div>
-						<div class="point "></div>
+						<div class="point"></div>
+						<div class="point"></div>
+						<div class="point"></div>
 						<div class="point"></div>
 						<div class="point"></div>
 						<div class="point"></div>
